salesforce-pm-custom/force-app/main/default/objects/CustomTask__c/CustomTask__c.object-meta.xml
<CustomObject>
    <label>Custom Task</label>
    <pluralLabel>Custom Tasks</pluralLabel>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>