salesforce-pm-custom/force-app/main/default/objects/CustomTask__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>CustomTasks</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>