salesforce-pm-custom/force-app/main/default/objects/CustomTask__c/fields/CustomProject__c.field-meta.xml
<CustomField>
    <fullName>CustomProject__c</fullName>
    <label>Custom Project</label>
    <type>MasterDetail</type>
    <referenceTo>CustomProject__c</referenceTo>
    <relationshipLabel>Custom Tasks</relationshipLabel>
    <relationshipName>CustomTasks</relationshipName>
</CustomField>